mpegts: fuzzy crc check for not so spec compliant files

Fixes Ticket598

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>